tests/e2e/semantics/mutation/invalid_arg_type.error
Error: syntax error in story at line 2, column 1

2|    a = "foo"
      ^^^

E0100: Can't assign `string` to `boolean`
