tests/e2e/semantics/mutation/invalid_arg_type.story
a = [1, 2] contains item:1
a = "foo"
